# Logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: build.yml  msbuild.yml
include/: Logger.hpp
src/: Logger.cpp  Logger.hpp
